--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,32 @@
 * {
   margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Kavoon", sans-serif;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("src/assets/fonts/Roboto-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Kavoon";
+  src: url("src/assets/fonts/Kavoon-Regular.ttf");
 }
 
 nav {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #322D4C;
+  background-color: #322d4c;
   z-index: 1000;
 }
 
@@ -17,7 +37,7 @@ nav ul {
   list-style: none;
   text-decoration: none;
   padding: 1.5rem;
-  background-color: #322D4C;
+  background-color: #322d4c;
 }
 
 .hero {
@@ -30,7 +50,7 @@ nav ul {
 }
 
 .container-image {
- /* width: 27%;*/
+  /* width: 27%;*/
   position: relative;
   /* background-color: red; */
   height: 28rem;
@@ -53,7 +73,6 @@ nav ul {
   /* z-index: 0; */
   width: 19rem;
   height: 25rem;
-
 }
 
 .description {
@@ -86,16 +105,14 @@ nav ul {
 
 .container-projets h2 {
   position: absolute;
-
 }
 
 :root {
-  background-color: #17131C;
+  background-color: #17131c;
   background-image: url("/flou.svg");
   background-repeat: no-repeat;
   background-size: cover;
   color: whitesmoke;
-  font-family: Nokora;
 }
 
 .btnCookie {
@@ -115,7 +132,7 @@ nav ul {
 }
 
 .btnCookie:hover {
-  background-color: #7341A2;
+  background-color: #7341a2;
   border: none;
   color: whitesmoke;
 }
@@ -126,7 +143,6 @@ nav ul {
   width: 30rem;
   height: 30rem;
   /* right: 3rem; */
-  
 }
 
 .second-cadre {
@@ -142,6 +158,3 @@ a {
   text-decoration: none;
   color: whitesmoke;
 }
-
-
- 
