--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Kavoon&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -10,16 +12,6 @@ h4,
 h5,
 h6 {
   font-family: "Kavoon", sans-serif;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("src/assets/fonts/Roboto-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Kavoon";
-  src: url("src/assets/fonts/Kavoon-Regular.ttf");
 }
 
 nav {
@@ -77,6 +69,7 @@ nav ul {
 
 .description {
   width: 40%;
+  font-weight: 400;
 }
 
 .description h1 {
