--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Kavoon&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 * {
-  margin: 0;
-  font-family: "Roboto", sans-serif;
+	margin: 0;
+	font-family: "Roboto", sans-serif;
+}
+
+@media (min-width: 800px) {
+	.container-projets .encours {
+		display: none;
+	}
+}
+
+@media (max-width: 799px) {
+	.container-projets .encours {
+		display: block; /* Ou flex si nécessaire */
+	}
 }
 
 h1,
@@ -11,143 +27,137 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Kavoon", sans-serif;
+	font-family: "Kavoon", sans-serif;
 }
 
 nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #322d4c;
-  z-index: 1000;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	background-color: #322d4c;
+	z-index: 1000;
 }
 
 nav ul {
-  display: flex;
-  justify-content: flex-end;
-  gap: 3rem;
-  list-style: none;
-  text-decoration: none;
-  padding: 1.5rem;
-  background-color: #322d4c;
+	display: flex;
+	justify-content: flex-end;
+	gap: 3rem;
+	list-style: none;
+	text-decoration: none;
+	padding: 1.5rem;
+	background-color: #322d4c;
 }
 
 .hero {
-  display: flex;
-  justify-content: center;
-  gap: 7rem;
-  align-items: center;
-  margin: 0 auto;
-  margin-top: 8rem;
+	display: flex;
+	justify-content: center;
+	gap: 7rem;
+	align-items: center;
+	margin: 0 auto;
+	margin-top: 8rem;
 }
 
 .container-image {
-  /* width: 27%;*/
-  position: relative;
-  /* background-color: red; */
-  height: 28rem;
-  width: 21rem;
+	position: relative;
+	height: 28rem;
+	width: 21rem;
 }
 
 .container-image img {
-  position: absolute;
-  width: 19rem;
-  border: 2px solid aqua;
-  /* z-index: 1; */
+	position: absolute;
+	width: 19rem;
+	border: 2px solid aqua;
 }
 
 .cadre {
-  position: absolute;
-  top: 2rem;
-  right: 0.4rem;
-  border: 2px solid aqua;
-  background-color: #322d4c;
-  /* z-index: 0; */
-  width: 19rem;
-  height: 25rem;
+	position: absolute;
+	top: 2rem;
+	right: 0.4rem;
+	border: 2px solid aqua;
+	background-color: #322d4c;
+	width: 19rem;
+	height: 25rem;
 }
 
 .description {
-  width: 40%;
-  font-weight: 400;
+	width: 40%;
+	font-weight: 400;
 }
 
 .description h1 {
-  margin-bottom: 1.5rem;
+	margin-bottom: 1.5rem;
 }
 
 .projets {
-  width: 30%;
-  position: relative;
+	width: 30%;
+	position: relative;
 }
 
 .descCookie {
-  position: absolute;
-  top: 3.5rem;
+	position: absolute;
+	top: 3.5rem;
 }
 
 .container-projets {
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  gap: 7rem;
-  /* margin-left: 7rem; */
-  margin-top: 4rem;
-  position: relative;
+	display: flex;
+	justify-content: center;
+	margin: auto;
+	gap: 7rem;
+	margin-top: 4rem;
+	position: relative;
 }
 
 .container-projets h2 {
-  position: absolute;
+	position: absolute;
 }
 
 :root {
-  background-color: #17131c;
-  background-image: url("/flou.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: whitesmoke;
+	background-color: #17131c;
+	background-image: url("/flou.svg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: whitesmoke;
 }
 
 .btnCookie {
-  display: flex;
-  align-items: center;
-  gap: 0.8rem;
-  background-color: transparent;
-  border: 1px solid aqua;
-  color: whitesmoke;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  position: absolute;
-  top: 2rem;
-  margin-left: 2rem;
+	display: flex;
+	align-items: center;
+	gap: 0.8rem;
+	background-color: transparent;
+	border: 1px solid aqua;
+	color: whitesmoke;
+	padding-left: 2rem;
+	padding-right: 2rem;
+	padding-bottom: 1rem;
+	padding-top: 1rem;
+	position: absolute;
+	top: 2rem;
+	margin-left: 2rem;
 }
 
 .btnCookie:hover {
-  background-color: #7341a2;
-  border: none;
-  color: whitesmoke;
+	background-color: #7341a2;
+	border: none;
+	color: whitesmoke;
 }
 
 .container-btn {
-  position: relative;
-  border: 2px solid aqua;
-  width: 30rem;
-  height: 30rem;
-  /* right: 3rem; */
+	position: relative;
+	border: 2px solid aqua;
+	width: 30rem;
+	height: 30rem;
 }
 
 .second-cadre {
-  position: absolute;
-  border: 2px solid aqua;
-  width: 30rem;
-  height: 30rem;
-  right: 2rem;
-  bottom: 1.5rem;
+	position: absolute;
+	border: 2px solid aqua;
+	width: 30rem;
+	height: 30rem;
+	right: 2rem;
+	bottom: 1.5rem;
 }
 
 a {
-  text-decoration: none;
-  color: whitesmoke;
+	text-decoration: none;
+	color: whitesmoke;
 }
